Added all routes for the 4 collections
